import img added

--- a/index.html
+++ b/index.html
@@ -2,10 +2,64 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/png" href="./src/assets/home/logo.2.png" />
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>frontend</title>
+
+    <!-- Primary Meta Tags -->
+    <title>
+      TentWood Trips | Travel Agency – India & International Tour Packages
+    </title>
+    <meta
+      name="description"
+      content="TentWood Trips is a trusted travel agency offering India tours, international holiday packages, honeymoon trips, group tours, and customized travel experiences. Explore the world with TentWood."
+    />
+    <meta
+      name="keywords"
+      content="TentWood Trips, travel agency, India tour packages, international trips, honeymoon packages, group tours, holiday packages, adventure travel, luxury travel"
+    />
+    <meta name="author" content="TentWood Trips" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:title"
+      content="TentWood Trips | India & International Travel Packages"
+    />
+    <meta
+      property="og:description"
+      content="Discover unforgettable journeys with TentWood Trips. From India tours to international holidays, honeymoon and group travel packages tailored for you."
+    />
+    <meta
+      property="og:image"
+      content="https://www.tentwoodtrips.com/og-image.jpg"
+    />
+    <meta property="og:url" content="https://www.tentwoodtrips.com/" />
+    <meta property="og:site_name" content="TentWood Trips" />
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta
+      name="twitter:title"
+      content="TentWood Trips | Travel Agency"
+    />
+    <meta
+      name="twitter:description"
+      content="Plan your next journey with TentWood Trips – India tours, international travel, honeymoon & group packages."
+    />
+    <meta
+      name="twitter:image"
+      content="https://www.tentwoodtrips.com/og-image.jpg"
+    />
+
+    <!-- SEO / Crawlers -->
+    <meta name="robots" content="index, follow" />
+    <link rel="canonical" href="https://www.tentwoodtrips.com/" />
+
+    <!-- Theme Color -->
+    <meta name="theme-color" content="#0ea5e9" />
   </head>
+
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
