--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
   </head>
 
   <body>
-    <div id="root"></div>
+    <div id="root" class="smooth-scroll"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
